tests/errors/regex-empty-group/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0002]: Empty grouping in regular expression.
  │
2 │ def main = `a()b`
  │              ^
  ╰─𜱶 tests/errors/regex-empty-group/main.pa:2:14
